fixed format, added txt doc, also spec was added
