# Task2/e-transport_back/src/user/user.controller.ts
@@ -1,50 +1,3 @@
-// import { Body, Controller, Delete, Get, HttpCode, Param, Post, Put } from '@nestjs/common';
-// import { ApiResponse, ApiTags } from '@nestjs/swagger';
-// import { UserService } from './user.service';
-// import { UserDto } from './dtos/user.dto';
-// import { UpdateUserDto } from './dtos/update-user.dto';
-
-// @ApiTags('user')
-// @Controller('user')
-// export class UserController {
-//     constructor(private readonly userService: UserService) { }
-
-//     @Get()
-//     @HttpCode(200)
-//     public async findAllUser() {
-//         const result = await this.userService.findAllUser();
-//         return result
-//     }
-//     @ApiResponse({ status: 403, description: 'Forbidden.'})
-
-//     @Post()
-//     @HttpCode(201)
-//     public async createUser(@Body() user: UserDto) {
-//         const result = await this.userService.createUser(user);
-//         return result
-//     }
-
-//     @Put(':id')
-//     @HttpCode(201)
-//     public async updateUser(@Body() user: UpdateUserDto, @Param('id') id: string) {
-//         const result = await this.userService.updateUser(user, id);
-//         return result
-//     }
-
-//     @Delete(':id')
-//     @HttpCode(200)
-//     public async deleteUser(@Param('id') id: string) {
-//         const result = await this.userService.deleteUser(id);
-//         return result
-//     }
-
-//     @Get(':id')
-//     public async getUserDetails(@Param('id') userId: string): Promise<UserDto> {
-//         return this.userService.getUserPlus(userId);
-//     }
-// }
-
-
 import { Body, Controller, Delete, Get, HttpCode, Param, Post, Put } from '@nestjs/common';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
 import { UserService } from './user.service';
@@ -82,7 +35,7 @@ export class UserController {
     @ApiResponse({ status: 500, description: 'Internal server error.' })
     public async updateUser(@Body() user: UpdateUserDto, @Param('id') id: string) {
         const result = await this.userService.updateUser(user, id);
-        return result;
+        return result
     }
 
     @Delete(':id')
